# EONASBench

./: .gitignore  .pdm-python  README.md  changelog.rst  demo_string_builder.py  pyproject.toml
bench/: profile.py  test_sequence_cli.py  verify_hpc_profile.py
configs/: search_macro_reduced.yaml  variant_a.yaml  variant_b.yaml
layers/: __init__.py  convnext_dil.py  convnext_se.py  convnext_v1.py  registry.py  vit_encoder.py  vit_rpe.py  vit_window.py
models/: backbone.py  build.py  string_builder.py  upernet.py
outputs/baseline/20260316_165424/: verification.json
tests/: test_custom_sequence.py  test_registry.py  test_shapes.py  test_string_builder.py
